Bug Fixed: Eliminado el atributo text-align: center para #content figure{} File: style.css

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ h2#site-description {
 #content figure{
 	margin: 0 auto;
 	line-height: 18px;
-	text-align: center;
 	max-width: 98%;
 }
 #content figure img {
